--- a/style/style.css
+++ b/style/style.css
@@ -45,6 +45,10 @@ body {
     width: 65%;
 }
 
+.text-left, p {
+    text-align: left;
+}
+
 .text-center {
     text-align: center;
 }
@@ -143,7 +147,6 @@ div.btn {
 p{
     line-height: 1.6em;
     margin-top: 30px;
-    text-align: left;
 }
 
 /* main */
@@ -165,9 +168,7 @@ section {
     margin-bottom: 200px;
 }
 
-.title {
-    text-align: left;
-}
+
 
 /* footer */
 footer {
