--- a/style/style.css
+++ b/style/style.css
@@ -125,6 +125,25 @@ a {
     color: #fff;
 }
 
+.btnwhite:hover {
+    color: #7289da;
+    text-shadow: #7289da 0 0 1px;
+    box-shadow: #354069 0 2px 10px;
+    transition: 0.5s;
+}
+
+.btnblack:hover {
+    box-shadow: #000 0 2px 10px;
+    background-color: #3a3f42;
+    transition: 0.5s;
+}
+
+.btnviolet:hover {
+    box-shadow: #354069 0 2px 10px;
+    background-color: #b2bef0;
+    transition: 0.5s;
+}
+
 /* header */
 
 header {
@@ -138,12 +157,12 @@ header .topbar {
 }
 
 header .jumbotron {
-    height: 550px;
     background-image: url(../img/jumbo.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position-y: center;
     padding-top: 100px;
+    padding-bottom: 200px;
 }
 
 #logo {
