--- a/style/style.css
+++ b/style/style.css
@@ -73,6 +73,7 @@ body {
 .btn {
     border-radius: 40px;
     text-decoration: none;
+    transition: 0.5s;
 }
 
 .btn.btnwhite, .btnwhite>a {
@@ -129,19 +130,20 @@ a {
     color: #7289da;
     text-shadow: #7289da 0 0 1px;
     box-shadow: #354069 0 2px 10px;
-    transition: 0.5s;
 }
 
 .btnblack:hover {
     box-shadow: #000 0 2px 10px;
     background-color: #3a3f42;
-    transition: 0.5s;
 }
 
 .btnviolet:hover {
     box-shadow: #354069 0 2px 10px;
     background-color: #b2bef0;
-    transition: 0.5s;
+}
+
+.upsidedown {
+    transform: rotateX(0.5turn);
 }
 
 /* header */
@@ -197,12 +199,13 @@ p{
 }
 
 section {
-    padding-bottom: 100px;
+    /* padding-bottom: 100px; */
     display: inline-block;
 }
 
 .block {
     margin-top: 150px;
+    padding-bottom: 50px;
 }
 
 #p1 {
@@ -214,12 +217,20 @@ section {
 }
 
 .bgwave {
-    background-image: linear-gradient(rgba(255,255,255,0.95), rgba(255,255,255,0.95)), url(../img/wave.svg);
+    background-image: linear-gradient(rgba(255,255,255,0.97), rgba(255,255,255,0.97)), url(../img/wave.svg);
     background-size: contain;
     background-repeat: no-repeat;
     width: 100%;
     padding-top: 300px;
-    margin-top: 50px;
+    /* margin-top: 50px; */
+    height: 50px;
+    z-index: 0;
+}
+
+.bg-grey {
+    background-color: #f6f6f6;
+    width: 100vw;
+    padding-bottom: 100px;
 }
 
 .final {
